--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="robots" content="noindex, nofollow">
+  <link href="https://fonts.googleapis.com/css?family=Condiment" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -108,7 +109,8 @@
   <!--site-actors section  -->
 
   <section class="vb">
-    <img src="images/vb.jpg" alt="">
+    <h1>incredible india</h1>
+    <img src="images/wheel.png" alt="wheel" class="anim">
   </section>
 
   <section class="actors">
@@ -163,7 +165,7 @@
 
   <!--footer section  -->
 
-  <footer class="footer">
+  <footer>
     <h1>www.incredible-india.nic.in</h1>
     &copy; Copyright 1992
   </footer>
