--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!--site head section  -->
   <header class="site-head" id="home">
-    <video poster="images/v.jpg" id="bgvid" playsinline autoplay muted loop>
+    <video poster="images/vb.jpg" id="bgvid" playsinline autoplay muted loop>
       <source src="images/vid.mp4" type="video/mp4">
     </video>
     <div class="container">
