--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>web-template</title>
+  <title>India Introduced</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="robots" content="noindex, nofollow">
+<link rel="icon" href="images/fav.ico" type="image/gif" sizes="16x16">
+<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Condiment" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
